Now reading server names from a file

--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-Simple script to get the free space on a remote server under windows
+Simple script to get the free space on a remote server under windows.
+The script reads the server names from a textfile.
