Small cleanup and bugfix

--- a/readme
+++ b/readme
@@ -1,2 +1,5 @@
 Simple script to get the free space on a remote server under windows.
 The script reads the server names from a textfile.
+
+The script wil now send an email if diskspace is below a certain treshhold.
+Dont forget to change the email settings in the script to make it work.
